# PayrollManagementSystem

./: Account.txt  CMakeLists.txt  Employee.cpp  Employee.txt  People.txt  README.md  Stuff.txt  Tasks.txt  main.cpp
Models/: Account.h  AccountERR.cpp  Departmans.h  Employee.cpp  Employee.h  HumanResources.h  Manager.cpp  People.h  ScreenType.h  Storage.cpp  Stuff.cpp  Task.h  Team.cpp
Operations/: Operations.cpp
Screens/Employee/: Employee_Main_Screen.cpp
Screens/HumanResources/: HumanResources_Main_Screen.cpp
Screens/Manager/: Manager_Main_Screen.cpp
